# sign-builder

./: Cargo.toml  LICENSE  index.html  main.css  style.css  tailwind.config.js
.github/workflows/: ci.yaml
src/: app.rs  components.rs  icons.rs  lib.rs  main.rs  models.rs  route.rs  services.rs  views.rs
src/components/: footer.rs  footer.scss  qr_code.rs  sign_form.rs  sign_form.scss  sign_list.rs  sign_list.scss
src/models/: colors.rs  language.rs  room.rs  sign.rs
src/services/: signs.rs
src/views/: display.rs  display.scss  index.rs  index.scss
tests/: services.rs
