[package]
name = "sign-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
gloo-utils = "0.2.0"
indexed_db_futures = "0.4.1"
qrencode = { version = "0.14.0", default-features = false, features = ["svg"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ulid = { version = "1.1.2", features = ["serde"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlFormElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
