[package]
name = "sign-builder"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["rappet <rappet@rappet.de>"]
publish = false

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
chrono = "0.4.38"
codee = { version = "0.2.0", features = ["json_serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-utils = "0.2.0"
implicit-clone = "0.5.0"
indexed_db_futures = "0.4.1"
leptos = { version = "0.6.15", features = ["csr", "nightly", "tracing"] }
leptos-use = { version = "0.13.9", features = ["storage", "use_favicon"] }
leptos_meta = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
log = "0.4.21"
qrencode = { version = "0.14.0", default-features = false, features = ["svg"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
tracing = { version = "0.1.40", features = ["log"] }
turf = "0.9.4"
ulid = { version = "1.1.2", features = ["serde"] }
url = "2.5.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlFormElement"] }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[package.metadata.turf]
load_paths = []
minify = true

[package.metadata.turf.class_names]
template = "sb-<original_name>-<id>"

[package.metadata.turf.browser_targets]
chrome = [80, 1, 2]
firefox = 65
safari = [12, 3]
